--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,51 +3,30 @@ name: CI/CD Pipeline
 on:
   push:
     branches:
-      - main   # Trigger on pushes to main branch
+      - main
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Build and push Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest .
-        docker push ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest
+      - name: Build and push Docker image
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest .
+          docker push ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest
 
-    - name: Set up kubectl
-      uses: azure/setup-kubectl@v3
-      with:
-        version: v1.27.3
-
-    - name: Configure kubeconfig
-      run: |
-        mkdir -p $HOME/.kube
-        echo "${{ secrets.KUBECONFIG }}" | base64 --decode > $HOME/.kube/config
-
-    - name: Set KUBECONFIG env globally
-      run: echo "KUBECONFIG=$HOME/.kube/config" >> $GITHUB_ENV
-
-    - name: Check kubeconfig
-      run: |
-        ls -la $HOME/.kube
-        cat $HOME/.kube/config
-
-    - name: Deploy to Kubernetes
-      run: |
-        kubectl apply -f kubernetes/namespace.yml
-        kubectl apply -f kubernetes/deployment.yml
-        kubectl apply -f kubernetes/service.yml
-        kubectl apply -f kubernetes/wisecow-ingress.yml
+      - name: Deploy to Kubernetes
+        run: |
+          echo "Deploying to Kubernetes..."
