--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,23 +10,32 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest .
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest
+    - name: Build and push Docker image
+      run: |
+        docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest .
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/wisecow:latest
 
-      - name: Deploy to Kubernetes
-        run: |
-          echo "Deploying to Kubernetes..."
+    - name: Set up Kind cluster
+      uses: engineerd/setup-kind@v0.5.0
+
+    - name: Get kubeconfig
+      run: kind get kubeconfig > $HOME/.kube/config
+
+    - name: Deploy to Kubernetes
+      run: |
+        kubectl apply -f kubernetes/namespace.yml
+        kubectl apply -f kubernetes/deployment.yml
+        kubectl apply -f kubernetes/service.yml
+        kubectl apply -f kubernetes/wisecow-ingress.yml
